fix: Signature verification exception (#2)